# cantata

./: Cargo.toml  Readme.md
.github/workflows/: check.yml
data/: main.py
src/: err.rs  fit.rs  gen.rs  lib.rs  main.rs  nml.rs  raw.rs  sim.rs  sup.rs
