[package]
name = "cantata"
version = "0.11.0-dev"
edition = "2024"
rust-version = "1.85.0"
authors = ["T. Hater"]
readme = "Readme.md"
license = "BSD-3-Clause"
repository = "https://github.com/thorstenhater/cantata"
description = "Convert SONATA package neuro science simulations into Arbor simulations."
keywords = ["neuro-science", "science", "simulation"]
categories = ["command-line-utilities"]

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0" }
clap         = { version = "4.0", features = ["derive"] }
thiserror    = { version = "2.0" }
anyhow       = { version = "1.0" }
csv          = { version = "1.0" }
hdf5-metno   = { version = "0.10" }
ciborium     = { version = "0.2" }
nml2         = { version = "0.3.1"}

[[bin]]
name = "cantata"
path = "src/main.rs"
